css/style.css
/* -----------------------------------------
* VARIABLES
-------------------------------------------*/
:root {
    /* Palette */
    --col-lightgreen: #d5f9ba;
    --col-green: #009688;
    --col-cyan: #8edafc;
    --col-blue: #5e5efd;
    --col-gray-100: #eaeaea;
    --col-gray-300: #d9dbd6;
    --col-gray-500: #b1b1b1;
    --col-gray-900: #6b7376;

    /* Layout */
    --ly-left: 300px;

    /* Misc */
    --sidebar-top: 174px;
    --conversation-header: 64px;
    --conversation-footer: 64px;
    --contact-img-height: 50px;
}


/* -----------------------------------------
* RESETS
-------------------------------------------*/



/* -----------------------------------------
* GENERICS
-------------------------------------------*/
html {
    font-size: 14px;
}

body {
    height: 100vh;

    background-image: linear-gradient(180deg, var(--col-green) 80px, var(--col-gray-300) 80px);
}

ul {
    margin: 0;
    padding: 0;

    list-style: none;
}

p {
    margin-bottom: 0;
}


/* -----------------------------------------
* LAYOUT
-------------------------------------------*/
.layout-main {
    height: 100%;

    display: flex;
}

.layout-left {
    flex: 0 0 var(--ly-left);
}

.layout-right {
    flex-grow: 1;
}


/* -----------------------------------------
* UTILS
-------------------------------------------*/
/*** COLORS ***/
.bg-gray-100 {
    background-color: var(--col-gray-100);
}

.bg-cyan {
    background-color: var(--col-cyan);
}

.text-gray-500 {
    color: var(--col-gray-500);
}

.text-gray-900 {
    color: var(--col-gray-900);
}

.text-cyan {
    color: var(--col-cyan);
}


/* -----------------------------------------
? COMPONENTS
-------------------------------------------*/
/*** BUTTONS ***/
.btn {
    padding: 0.5rem;
    font-size: 1.4rem;
}

.btn.btn-gray-500 {
    color: var(--col-gray-500);
}

.btn.btn-gray-500:hover {
    color: var(--col-green);
}

.btn.btn-gray-900 {
    color: var(--col-gray-900);
}

.btn.btn-gray-900:hover {
    color: var(--col-green);
}


/*** ROUNDED ICONS ***/
.rounded-icon {
    height: 50px;
    width: 50px;

    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    font-size: 1.5rem;
}


/*** SEARCH INPUTS ***/
.form-search {
    position: relative;
}

.form-search input {
    padding-left: 3rem;

    border: none;
}

.form-search::before {
    position: absolute;
    top: 50%;
    left: 1.5rem;
    transform: translateY(-50%);

    display: inline-block;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    font: var(--fa-font-solid);

    color: var(--col-gray-500);
    content: "\f002";
}


/*** CONTACT CARD ***/
.contact-card {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.contact-card-left {
    display: flex;
    align-items: center;
}

.contact-card-right {
    display: flex;
}

.contact-img {
    height: var(--contact-img-height);
    width: auto;

    border-radius: 50%;
}


/*** SIDEBAR ***/
.sidebar {
    background-color: #fff;
    border-right: 1px solid var(--col-blue);
}

.sidebar-top {
    height: var(--sidebar-top);
}

.sidebar-bottom {
    height: calc(100% - var(--sidebar-top));

    overflow: auto;
}


/*** CONVERSATION ***/
.conversation-header {
    height: var(--conversation-header);
}

.conversation-footer {
    height: var(--conversation-footer);
}

.conversation-messages {
    height: calc(100% - var(--conversation-header) - var(--conversation-footer));

    background-image: url('../img/mine.jpg');
    
    overflow: auto;
}


/*** MESSAGE ***/
.message {
    margin: 1rem;
    padding: 1rem;
    width: 50%;

    border-radius: 0.5rem;
}

.message.sent {
    margin-left: auto;

    background-color: var(--col-lightgreen);
}

.message.received {
    margin-right: auto;

    background-color: #fff;
}


/* -----------------------------------------
? RESPONSIVE
-------------------------------------------*/

